# what2eat

./: LICENSE  main.py  pyproject.toml  seeder.py
alembic/: env.py
alembic/versions/: 7fd37f1cb08f_initial_migration.py
src/: lifespan.py  main.py
src/auth/: config.py
src/core/: config.py  database.py  exception.py
src/dishes/: model.py  repository.py  router.py  schema.py  service.py
